# dyno.py

./: .gitignore  AGENTS.md  BSD-3-Clause.txt  LICENSE  RBC.dyno  README.md  TODO  checkit.py  coverage.xml  dev.py  dev2.py  dev_dynare.py  dev_dynofile.py  dev_higher_1.py  dev_higher_2.py  dev_import.py  dev_import_tests.py  dev_jax.py  dev_metadata.py  dev_model_classes.py  dev_plans.qmd  dyno-0.1.7.1-pyh4616a5c_0.conda  dyno-0.1.7.2-pyh4616a5c_0.conda  dynorun.py  import_tests.yaml  index.html  mkdocs.yml  model.dyno  pixi.toml  pyproject.toml  rbc.mod  report_txt.py  t_KR.py  t_dyno.py  temp2.yml  test_sparse.py  test_terminal_conditions.py
.devcontainer/: devcontainer.json
ICAI/: partial.dyno  partial2.dyno  partial_deterministic.dyno  partial_shock.dyno  solve_icai.py
docs/: classes.md  classes.md.bak  classes.md.messy  classes_clean.md  getting_started_dynare.md  getting_started_dyno.md  index.md  model.md  model2.md  model_classes.md  solution_methods.md
dyno/: __init__.py  langage.py  language.py  misc.py  model.py  modfile.py  modfile_grammar.lark  modfile_lark.py  modfile_preprocessor.py  shape_types.py  simul.py  solver.py  typedefs.py  types.py  util_json.py  yamlfile.py
examples/: RBC.dyno  neo.dyno  neo.dyno.yaml  neo.yaml  ramst.dyno  t_KR.py  t_dyno.py
recipe/: meta.yaml  recipe.yaml
scratch/: dev.py  dev_dynare.py  dev_dyno.py  dev_higher_1.py  dev_higher_2.py  dev_import.py  dev_import_tests.py  dev_jax.py  dev_metadata.py  dev_model_classes.py  dev_modfiles.py  dev_report.py  dev_tags.py
search/: search_index.json
tests/: test_KR.py  (+15 more)
(+53 files in other folders)
