[project]
name = "dyno"
version = "0.1.7.5"
requires-python = ">= 3.12,<3.14"

[project.scripts]
dynare = "dyno.cli:dynare_cmd"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/dyno"]

[tool.hatch.build.targets.wheel.force-include]
"src/dyno/py.typed" = "dyno/py.typed"

[tool.hatch.build.targets.sdist.force-include]
"src/dyno/py.typed" = "dyno/py.typed"
