[project]
name = "dyno"
version = "0.1.8"
requires-python = ">= 3.12,<3.14"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/dyno"]

[tool.hatch.build.targets.wheel.force-include]
"src/dyno/py.typed" = "dyno/py.typed"

[tool.hatch.build.targets.sdist.force-include]
"src/dyno/py.typed" = "dyno/py.typed"
